@@ -38,5 +38,6 @@ dos.fs: 144512
 est.fs: 145592
 xos.fs: 148404
 xis.fs: 157604
+rdg.fs: 157428
 
 fina: CompileSize=80186 CompileTime=10714 msec TestTime=24450 msec (without floats)
